  * Fixed 3G support for modems with PIN unlocking
  * More extensive firmware support
  * Better filesystem security (read-only root fs)
  * Filesystem is now FHS-3.2+/run-compliant
  * Added "readonly" boot parameter for disabling persistence
  * Added "toram" boot parameter for copying root filesystem to RAM
  * Added "gentoo=xvesa" boot parameter for forcing VESA driver in X server
  * setup.sh is now more robust (MBR write fix, 64-bit-only systems warning)

  * Cables communication now maintains repudiability
  * Added Open Virtualization bundle (OVA)

  * Better support for VMware and VirtualBox virtualization
  * Better support for regular mailboxes in Claws-Mail
  * Better Bluetooth support
  * Better hardware support (nVidia SATA, DVBs, joysticks, input tablets)
  * Added gFTP file transfer client
  * Replaced Xarchiver with File Roller

  * Unsafe Browser now refuses to run once Tor has established a circuit
  * Added keyboard layout configuration via locale customization applet


2011-11-07
  + 2011.2 release

  * ISO image generation, useful for VMs and independent installs
  * Support for installing to ext2/3/4 filesystems
  * Directories are hidden on FAT (during install) and ISO (in Joliet layer)
  * Added silent splash theme, which also disables logo in X server
  * Added configuration-gathering tool for bug reporting

  * Kernel 2.6.39 with SquashFS XZ compression and NX support
  * Requirements bumped to PentiumIII+ (implies MMX, SSE) with PAE
  * All RAM is wiped on shutdown/reboot, regardless of 3GiB address space limit
  * Xorg server 1.10, better touchpad support
  * Better integration as VirtualBox (including clipboard), VMWare, QEMU guest
  * VirtualBox shares are now supported as automount directories
  * HFS and HFS+ filesystems are now supported as read-only automounts

  * Optional I2P support via gentoo=i2p kernel argument
  * HTP time daemon has been hardened and extended to aid I2P service